<resources>
    <string name="app_name">Tagged Clone</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="zayn_malik01">Zayn_malik01</string>
    <string name="_24_london_england">24 - London,England</string>
    <string name="single_option_opener">single option opener</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="initial_values">0</string>
    <string name="prateek_shukla">Prateek Shukla</string>
    <string name="live">Live</string>
    <string name="meet_me">Meet Me</string>
    <string name="play">Play</string>
    <string name="chat">Chat</string>
    <string name="profile_viewers">Profile viewers</string>
    <string name="likes_you">Likes you</string>
    <string name="favorites">Favorites</string>
    <string name="invite_friends">Invite friends</string>
    <string name="communication">Communication</string>
    <string name="go_live">Go Live</string>
    <string name="join_premium">Join Premium</string>
    <string name="get_gold">Get Gold</string>
    <string name="more_fum">More fun</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="live_text">Live</string>
    <string name="browse">Browse</string>
    <string name="pets">Pets</string>
    <string name="friends">Friends</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="or">OR</string>
    <string name="skip_login">Skip Login</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="searching_for_a_relationship">Searching for a relationship?</string>
    <string name="we_make_that_easy_for_you">We make that easy for you.</string>
    <string name="our_algorithm_matches_more_effectively">Our algorithm matches more effectively</string>
    <string name="confused_about_matching">Confused about matching?</string>
    <string name="are_you_feeling_alone">Are you Feeling Alone?</string>
    <string name="are_you_searching_for_the_real_fun_in_life">Are you searching for the real fun in life?</string>
    <string name="next">next</string>
    <string name="skip">skip</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="near_by">Near By</string>
    <string name="other_location">Other Location</string>
    <string name="distance_to_cover">Distance To Cover</string>
    <string name="details">Details</string>
    <string name="relationship_status">Relationship Status</string>
    <string name="ethnicity">Ethnicity</string>

    <string-array name="status_array">
        <item>Select status</item>
        <item>Single</item>
        <item>Dating</item>
        <item>In a relationship</item>
        <item>Engaged</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Separated</item>
        <item>Widowed</item>
        <item>It\'s complicated</item>
    </string-array>

    <string-array name="ethnicity_array">
        <item>No preferences</item>
        <item>African American</item>
        <item>Asian</item>
        <item>Caucasian//white</item>
        <item>East Indian</item>
        <item>Middle Eastern</item>
        <item>Native American</item>
        <item>Pacific Islander</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="contact_us">Contact us</string>
    <string name="tagged_v9_13_1">Tagged (v9.13.1)</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="manage_bouncers">Manage Bouncers</string>
    <string name="cancel_account">Cancel Account</string>
    <string name="change_password">Change Password</string>
    <string name="account">Account</string>
    <string name="push">Push</string>
    <string name="types">Types</string>
    <string name="live_video">Live video</string>
    <string name="modes">Modes</string>
    <string name="message">Message</string>
    <string name="friend_requests">Friend requests</string>
    <string name="friend_requests_accepted">Friend requests accepted</string>
    <string name="meet_me_likes_you">Meet Me likes you</string>
    <string name="meet_me_matches">Meet Me matches</string>
    <string name="pets_brought_from_you">Pets brought from you</string>
    <string name="pets_brought_you">Pets brought you</string>
    <string name="luv">Luv</string>
    <string name="vip_subscription">VIP subscription</string>
    <string name="_3_months">3 Months &#128293;</string>
    <string name="most_popular">Most Popular</string>
    <string name="_20_97_auto_renewing">$20.97 auto-renewing</string>
    <string name="_1_month">1 month</string>
    <string name="_9_99_auto_renewing">$9.99 auto-renewing</string>
    <string name="_6_month">6 month</string>
    <string name="_29_94_auto_renewing">$29.94 auto-renewing</string>
    <string name="_4_99_month">($4.99/month)</string>
    <string name="full_price">Full Price</string>
    <string name="save_50">Save 50%</string>
    <string name="save_30">Save 30%</string>
    <string name="_9_99_month">($9.99/month)</string>
    <string name="_6_99_month">($6.99/month)</string>
    <string name="you_can">You can cancel at any time. \n When you purchase a subscription,
        the amount will be deducted from your Google Pay account. 24 hourse before the expiry
        of the current subscription term. your account will be charged for a renewal.
        After a purchase, the automatic renewal can be cancelled of anytime on Google Pay</string>
    <string name="continu">Continue</string>
    <string name="redpassion">Redpassion &#128293;</string>
    <string name="nisha">Nisha</string>
    <string name="other_details">Other details</string>
    <string name="nameofgirl">Redpassion</string>
    <string name="_1_person_viewed_your_profile">1 person viewed your profile.</string>
    <string name="find_out_who_by_joining_vip">Find out who by joining VIP</string>
    <string name="join_vpn">Join vpn</string>
    <string name="no_likes_received_yet">No likes received yet.</string>
    <string name="the_more_you_play_meet_me_the_people_will_n_see_you">The more you play Meet Me, the people will see you</string>
    <string name="play_meet_me">Play meet me</string>
    <string name="tagged_is_more_fun_with_friends">Tagged is more fun with friends.</string>
    <string name="send_invites_to_your_friends">Send invites to your friends</string>
    <string name="copy_invite_link">Copy invite link</string>
    <string name="image22">image22</string>
    <string name="image23">image23</string>
    <string name="image33">image33</string>
    <string name="image34">image34</string>
    <string name="gold">gold :</string>
    <string name="_100">100</string>
    <string name="cash">Cash :</string>
    <string name="_53_360_000_000uv">$53,360,000,000Uv</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="image4">image4</string>
    <string name="shawn_mendes">Shawn Mendes</string>
    <string name="less_than_0_01uv">Less than $0.01Uv</string>
    <string name="value">value:</string>
    <string name="cash1">Cash:</string>
    <string name="_53_360_000_00uv">$53,360,000,000Uv</string>
    <string name="assets">Assets:</string>
    <string name="_563_60_000uv">$563,60,000Uv</string>
    <string name="last_purchase">Last purchase :</string>
    <string name="_1"># 1</string>
    <string name="a_day_ago">A Day Ago</string>
    <string name="jhoana">Jhoana</string>
    <string name="owned_by">Owned By:</string>
    <string name="_1_">1</string>
    <string name="pets_owned">Pets Owned:</string>
    <string name="whisers">| Whisers:</string>
    <string name="_1__">1</string>
    <string name="my_pets">My Pets</string>
    <string name="image5">image5</string>
    <string name="wish_list">Wish list</string>
    <string name="Gold1">Gold</string>
    <string name="image6">image6</string>
    <string name="image7">image7</string>
    <string name="image8">image8</string>
    <string name="image9">image9</string>
    <string name="image10">image10</string>
    <string name="new_rate">New Rate!</string>
    <string name="change_1_gold_to">Change 1 gold to</string>
    <string name="_100_bonus_gold">100% Bonus Gold!</string>
    <string name="image11">image11</string>
    <string name="_03d_22h_02m_left">03d 22h 02m left</string>
    <string name="buy_gold">Buy Gold</string>
    <string name="earn_free_gold">Earn Free Gold</string>
    <string name="watch_a_short_video">Watch a short video</string>
    <string name="watch_video">Watch Video</string>
    <string name="todo">TODO</string>
    <string name="achiements">Achiements</string>
    <string name="image12">image12</string>
    <string name="image15">image15</string>
    <string name="image16">image16</string>
    <string name="image18">image18</string>
    <string name="image17">image17</string>
    <string name="elon_musk">Elon Musk</string>
    <string name="image50">image50</string>
    <string name="imaage51">image51</string>
    <string name="image52">image52</string>
    <string name="image53">image53</string>
    <string name="value1">value:</string>
    <string name="more_than_100bn">More than $100Bn</string>
    <string name="cash2">Cash:</string>
    <string name="_200_bn">$ 200 Bn</string>
    <string name="owned">Owned:</string>
    <string name="tesla_spacex">Tesla |SpaceX</string>
    <string name="igonre">Igonre</string>
    <string name="buy_back">Buy Back</string>
    <string name="live_and_trending">LIVE AND TRENDING &#128293;</string>
    <string name="_35_las_vegas_california">35, Las Vegas, California</string>
    <string name="sanvi">Sanvi</string>
    <string name="sunitha_j">Sunitha J</string>
    <string name="aarohi">Aarohi</string>
    <string name="kushi_keerthana">Kushi Keerthana</string>
    <string name="riya">Riya</string>
    <string name="rashmika_m">RashmiKa M</string>
    <string name="danny">Danny</string>
    <string name="register">Register</string>
    <string name="register_here">Register Here</string>
    <string name="confirm_password">Confirm password</string>
</resources>