<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/ic_play_button_inside_a_circle"
            android:title="@string/live" />
        <item
            android:id="@+id/nav_meetMe"
            android:icon="@drawable/ic_handshake"
            android:title="@string/meet_me" />
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_compass"
            android:title="@string/browse" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_profileViewers"
            android:icon="@drawable/ic_view"
            android:title="@string/profile_viewers" />
        <item
            android:id="@+id/nav_likesYou"
            android:icon="@drawable/ic_star"
            android:title="@string/likes_you" />
    </group>

    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_fav"
                android:icon="@drawable/ic_baseline_verified_user_24"
                android:title="@string/favorites" />
            <item
                android:id="@+id/nav_inviteFriends"
                android:icon="@drawable/ic_user2"
                android:title="@string/invite_friends" />
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_friends"
                android:title="@string/friends" />
        </menu>
    </item>

</menu>