<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.likes.LikeFragment">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_200"
        android:layout_marginBottom="@dimen/dp_250"
        android:background="@drawable/ic_vip_join_likes_you"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/sp_24"
        android:fontFamily="@font/lato"
        android:textColor="@color/light_dark"
        android:textStyle="bold"
        android:text="@string/no_likes_received_yet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />
    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:textSize="@dimen/sp_18"
        android:fontFamily="@font/lato"
        android:textColor="@color/gray_medium"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingStart="@dimen/dp_30"
        android:paddingEnd="@dimen/dp_30"
        android:text="@string/the_more_you_play_meet_me_the_people_will_n_see_you"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp_5"
        app:layout_constraintTop_toBottomOf="@id/textView14"
        android:layout_margin="@dimen/dp_40"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/play_meet_me"
        android:background="@color/tagged_official"
        />

</androidx.constraintlayout.widget.ConstraintLayout>